# parallax-cli

./: .gitignore  .wtp.yml  CLAUDE.md  DEV_LOG.md  Justfile  Makefile  README.md  SKILL.md  VISION.md  main.py  pyproject.toml  pyrightconfig.json  requirements.txt
.claude/: settings.local.json
.playwright-mcp/: page-2026-04-16T21-01-36-515Z.yml  page-2026-04-16T21-05-39-739Z.yml  page-2026-04-16T21-07-35-893Z.yml  page-2026-04-16T21-08-04-851Z.yml  page-2026-04-16T21-11-12-214Z.yml
assets/fonts/: README.md
config/: agents.yaml  parallax.yaml
core/: agent_loop.py  budget.py  cli_errors.py  concerns.py  cost_tracker.py  evaluator.py  events.py  head_of_production.py  health.py  improvement_officer.py  instrumented.py  llm.py  logging_setup.py  paths.py  pre_watch_brief.py  pricing.py  project_layout.py  review.py  run_log.py  transcription_tools.py  trust.py  video_tools.py
docs/: parallax-plexi-app-spec-v2.3.md  parallax-plexi-app-spec.md  parallax-plexi-packaging.md
docs/handoffs/: manifest-first-refactor.md
packs/video/: asset_generator.py  assistant_editor.py  (+11 more)
scripts/: bootstrap-ecosystem.sh  install.sh
specs/: manifest-first-refactor.md  v2.md
test/: ROUND_2_PLAN.md  drill_scenarios.py  drill_scenarios_r2.py  harness.py  run_test.py  test_cli.py  test_manifest_first.py  test_manifest_validator.py  test_regression.py  test_scenarios.py  test_transcript_integrity.py
tools/: storyboard.py
web/: README.md  costs.py  head_of_production_prompt.md  hop_prompt.md  pyproject.toml  registry.py  requirements.txt  server.py  server_log.py  telemetry.py
(+70 files in other folders)
