[project]
name = "parallax-cli"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "pillow>=10.0",
    "pyyaml>=6.0",
    "elevenlabs>=1.0",
    "google-genai>=0.3",
]
# whisperx and faster-whisper are optional — install manually if needed:
#   uv add whisperx   OR   uv add faster-whisper

[tool.uv]
dev-dependencies = []
